--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,40 +12,33 @@ jobs:
         python-version: [3.7]
     steps:
       - uses: actions/checkout@v2
-      #- name: install mamba
-        #uses: mamba-org/provision-with-micromamba@main
-        #with:
-          #environment-file: environment.yml
-          #environment-name: convml_tt
-
-#      - name: Setup conda
-#        uses: s-weigand/setup-conda@v1
-#        with:
-#          update-conda: true
-#          python-version: ${{ matrix.python-version }}
-#          conda-channels: anaconda, conda-forge
-#      - run: conda --version
-#      - name: Add conda to system path
-#        run: |
-#          # $CONDA is an environment variable pointing to the root of the miniconda directory
-#          echo $CONDA/bin >> $GITHUB_PATH
-#      - name: Install dependencies
-#        run: |
-#          conda env update --file environment.yml --name fcfa-swift
-
 #     - name: Setup tmate session
 #       uses: mxschmitt/action-tmate@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          channels: conda-forge
+          channel-priority: strict
+          mamba-version: "*"
+          activate-environment: convml_tt
+          auto-update-conda: false
+          python-version: ${{ matrix.python-version }}
+      - name: Set up conda environment
+        run: |
+          mamba install "torchvision>=0.4.0" pytorch cpuonly -c conda-forge -c pytorch
+      - run: conda --version
+      - run: which python
+
+      - name: install convml-tt
+        run: |
+          python -m pip install convml-tt>=0.12.0
       - name: Install test packages
         shell: bash -l {0}
         run: |
-          pip install pytest nbval
+          python -m pip install pytest nbval
       - name: which python
         shell: bash -l {0}
         run: |
           which python
-      - name: Download test data
-        run: |
-          bash binder/postBuild
       - name: git info
         run: |
           git log --name-only -1 | cat -
