--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -24,13 +24,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Set up conda environment
         run: |
-          mamba install "torchvision>=0.4.0" pytorch cpuonly -c conda-forge -c pytorch
+          mamba env update --file binder/environment.yml
       - run: conda --version
       - run: which python
-
-      - name: install convml-tt
-        run: |
-          python -m pip install convml-tt>=0.12.0
       - name: Install test packages
         shell: bash -l {0}
         run: |
