--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Test with pytest
         shell: bash -l {0}
         run: |
-          pytest --nbval
+          pytest --nbval-lax
