--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -42,6 +42,11 @@ jobs:
       - name: git info
         run: |
           git log --name-only -1 | cat -
+      - name: Download test data
+        shell: bash -l {0}
+        run: |
+          cd notebooks |
+          wget http://homepages.see.leeds.ac.uk/~earlcd/ml-datasets/Nx256_s200000.0_N500study_N2000train.tgz
       - name: Test with pytest
         shell: bash -l {0}
         run: |
