--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -48,7 +48,10 @@ jobs:
           cd notebooks
           curl http://homepages.see.leeds.ac.uk/~earlcd/ml-datasets/Nx256_s200000.0_N500study_N2000train.tgz --output Nx256_s200000.0_N500study_N2000train.tgz
           tar zxvf Nx256_s200000.0_N500study_N2000train.tgz
+      - name: list directories
+        run: |
+          tree -d
       - name: Test with pytest
         shell: bash -l {0}
         run: |
-          pytest --nbval-lax --nbval-cell-timeout 10000
+          pytest --nbval-lax
