--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
+        # not testing on macos since the notebook execution times out for nbval
         python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
@@ -48,9 +49,6 @@ jobs:
           cd notebooks
           curl http://homepages.see.leeds.ac.uk/~earlcd/ml-datasets/Nx256_s200000.0_N500study_N2000train.tgz --output Nx256_s200000.0_N500study_N2000train.tgz
           tar zxvf Nx256_s200000.0_N500study_N2000train.tgz
-      - name: list directories
-        run: |
-          tree -d
       - name: Test with pytest
         shell: bash -l {0}
         run: |
