Update for 2022 course (#2)
* add ci testing
* add binder setup
* update all notebooks to work with convml-tt v0.12.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .*.sw*
 .DS_Store
+*.nc
+lightning_logs/
 
 Nx256_s200000.0_N500study_pretrained*
 .ipynb_checkpoints/
+notebooks/data/
+notebooks/random_waves/
